--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
         "zustand": "^5.0.5"
     },
     "devDependencies": {
-        "@types/node": "^20",
+        "@types/node": "20.19.8",
         "@types/prismjs": "^1.26.5",
-        "@types/react": "^18",
+        "@types/react": "18.3.23",
         "@types/react-dom": "^18",
         "@types/react-lottie": "^1.2.10",
         "eslint": "^8",
@@ -39,6 +39,6 @@
         "prettier": "^3.5.3",
         "prettier-plugin-tailwindcss": "^0.6.12",
         "tailwindcss": "^3.4.1",
-        "typescript": "^5"
+        "typescript": "5.8.3"
     }
 }
